2015-10-17  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/xml/JournalFile_test.xml: Created test file
	for journalfile.xsd.  Validated both .xsd and .xml file.

	* Tools/bookentry/xml/journalfile.xsd: Started journal file
	description.

	* Data/Ajb/ajb45_books.txt: finished AJB 45 today.

2015-10-04  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/symbols.txt: added minus superscript.

2015-07-26  Jim Fowler  <jrf@Biblion>

	* Tools/ppxml: Wrote pretty print routine for XML files.  This way
	users can look at a file as well as the computer.

2015-07-25  Jim Fowler  <jrf@Biblion>

	* Data/Ajb: Began adding reviewer's names to the reviews starting
	with ajb46_books.txt starting with entry 172. A colon after the
	review signifies that I have check AJB for the reviewer's name

2015-07-11  Jim Fowler  <jrf@Biblion>

	* Tools/doc/theory.rst: Started work on documenting the format of
	the BookFile.

2015-07-06  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/bookfile.py (BookFile.readfile_XML): Write
	readfile_XML().

2015-07-05  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/bookfile.py (BookFile.writefile_XML): completed
	AJBentry:create_XML() routine. Finished bookfile:writeXML()
	routine. Tested all.  Had to modify xml/bookfile.xsd to accomodate
	changes in how I did things.

	* Tools/versions: added tags to the git repository for the book
	entry versions.

2015-07-04  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/AJBentry.py (AJBentry.create_XML): changed name
	of write_XML() and modified it to use append.  Now all XML
	functions return elements.  Need to finish ReprintOf, Publishers,
	Prices, and Pagination.

2015-06-27  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/xml/bookfile.xsd: cleaned up the file a bit.

	* Tools/bookentry/xml/bookxml.py: Added parser and schema validation
	to test file.

2015-06-25  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/xml/bookfile.xsd: Added G2 element and redefined
	Authors, Editors, etc.

2015-06-23  Jim Fowler  <jrf@Biblion>
