@@ -1,3 +1,11 @@
+2015-10-18  Jim Fowler  <jrf@Biblion>
+
+	* Tools/setup.py: added validateXML to scripts list.
+
+	* Tools/validateXML: wrote first version. Tested against existing
+	schemas and testfiles.  Modified schemas and testfiles as
+	necessary.
+
 2015-10-17  Jim Fowler  <jrf@Biblion>
 
 	* Tools/bookentry/xml/JournalFile_test.xml: Created test file
